Fix design on smaller screens

--- a/aiida-registry-app/src/Components/Details.css
+++ b/aiida-registry-app/src/Components/Details.css
@@ -46,3 +46,10 @@ td {
   padding-top: 8px;
   padding-bottom: 8px;
 }
+
+@media only screen and (min-width : 150px) and (max-width : 780px)
+  {
+    #details {
+        width: 90%;
+      }
+  }
