--- a/aiida-registry-app/src/Components/PluginsList.css
+++ b/aiida-registry-app/src/Components/PluginsList.css
@@ -10,3 +10,17 @@
     -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
     box-shadow:inset 0 1px 1px rgba(0,0,0,.05);
 }
+
+@media only screen and (min-width : 150px) and (max-width : 780px)
+  {
+    .submenu-entry
+      {
+        width:70%;
+        min-height:140px;
+        padding:10px;
+        margin: 10px;
+        padding-left: 40px;
+        padding-right: 40px;
+        overflow: auto;
+      }
+  }
